--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["conosco", "Odonto", "semibold", "tailwindcss"]
+  "cSpell.words": ["conosco", "Informations", "Odonto", "semibold", "tailwindcss"]
 }
