--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["conosco", "Informations", "Odonto", "semibold", "tailwindcss"]
+  "cSpell.words": [
+    "conosco",
+    "contato",
+    "Informations",
+    "Odonto",
+    "semibold",
+    "svgs",
+    "tailwindcss"
+  ]
 }
