adding patient reviews

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
   "cSpell.words": [
     "Clareamento",
     "clareamentos",
+    "Claúdio",
     "conosco",
     "contato",
     "Dentística",
+    "Franscisco",
     "imgs",
     "Implantodontia",
     "Informations",
